--- a/RestaurantDAL/RestaurantDAL.csproj
+++ b/RestaurantDAL/RestaurantDAL.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RestaurantModel\RestaurantModel.csproj" />
+  </ItemGroup>
+
 </Project>
