--- a/RestaurantLogic/RestaurantLogic.csproj
+++ b/RestaurantLogic/RestaurantLogic.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RestaurantDAL\RestaurantDAL.csproj" />
     <ProjectReference Include="..\RestaurantModel\RestaurantModel.csproj" />
   </ItemGroup>
 
