--- a/RestaurantLogic/RestaurantLogic.csproj
+++ b/RestaurantLogic/RestaurantLogic.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RestaurantDAL\RestaurantDAL.csproj" />
     <ProjectReference Include="..\RestaurantModel\RestaurantModel.csproj" />
   </ItemGroup>
 
