--- a/RestaurantChapeau/Properties/launchSettings.json
+++ b/RestaurantChapeau/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "RestaurantChapeau": {
       "commandName": "Project",
-      "commandLineArgs": "debugui"
+      "commandLineArgs": ""
     }
   }
 }
