--- a/RestaurantChapeau/RestaurantChapeau.csproj
+++ b/RestaurantChapeau/RestaurantChapeau.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Remove=".DS_Store" />
+    <None Remove="OrderViewUIController\.DS_Store" />
   </ItemGroup>
 
   <ItemGroup>
